fdo#46926: fix UNO struct comparison in Python 2

This requires setting a rich comparison flag in Python 2, while Python 3
uses rich comparison by default.
(regression from a09ce46818fd4d5e08b3af9a478501cd8ef5b4fe)
(cherry picked from commit 387389b644b91808fdee74846b2d855382f48ed7)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>